export const snapshot = {};

snapshot[`call-trace debug_traceTransaction 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000002",
      logs: [
        {
          address: "<contract_callee_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002",
          position: "0x0",
          topics: [
            "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
          ],
        },
      ],
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x0",
    },
    {
      error: "execution reverted",
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0xd1b96663",
      output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
      revertReason: "This function always fails",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      calls: [
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000001",
          logs: [
            {
              address: "<contract_callee_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001",
              position: "0x0",
              topics: [
                "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
              ],
            },
          ],
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x0",
        },
        {
          error: "execution reverted",
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xd1b96663",
          output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
          revertReason: "This function always fails",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000000",
          to: "<contract_addr>",
          type: "CALL",
          value: "0x0",
        },
      ],
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000001",
      logs: [
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
          position: "0x1",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
          position: "0x2",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
      ],
      to: "<contract_addr>",
      type: "CALL",
      value: "0x0",
    },
  ],
  from: "<caller>",
  gas: "<gas>",
  gasUsed: "<gas>",
  input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000002",
  logs: [
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
      position: "0x1",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
      position: "0x2",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
  ],
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`call-trace debug_deploy_traceTransaction 1`] = `
{
  from: "<caller>",
  gas: "<gas>",
  gasUsed: "<gas>",
  input: "<code>",
  to: "<contract_callee_addr>",
  type: "CREATE",
  value: "0x0",
}
`;

snapshot[`call-trace debug_traceBlock 1`] = `
[
  {
    result: {
      calls: [
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000002",
          logs: [
            {
              address: "<contract_callee_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000002",
              position: "0x0",
              topics: [
                "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
              ],
            },
          ],
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x0",
        },
        {
          error: "execution reverted",
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xd1b96663",
          output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
          revertReason: "This function always fails",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          calls: [
            {
              from: "<contract_addr>",
              gas: "<gas>",
              gasUsed: "<gas>",
              input: "0x",
              to: "<contract_callee_addr>",
              type: "CALL",
              value: "0x2386f26fc10000",
            },
            {
              from: "<contract_addr>",
              gas: "<gas>",
              gasUsed: "<gas>",
              input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000001",
              logs: [
                {
                  address: "<contract_callee_addr>",
                  data: "0x0000000000000000000000000000000000000000000000000000000000000001",
                  position: "0x0",
                  topics: [
                    "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
                  ],
                },
              ],
              to: "<contract_callee_addr>",
              type: "CALL",
              value: "0x0",
            },
            {
              error: "execution reverted",
              from: "<contract_addr>",
              gas: "<gas>",
              gasUsed: "<gas>",
              input: "0xd1b96663",
              output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
              revertReason: "This function always fails",
              to: "<contract_callee_addr>",
              type: "CALL",
              value: "0x2386f26fc10000",
            },
            {
              from: "<contract_addr>",
              gas: "<gas>",
              gasUsed: "<gas>",
              input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000000",
              to: "<contract_addr>",
              type: "CALL",
              value: "0x0",
            },
          ],
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000001",
          logs: [
            {
              address: "<contract_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
              position: "0x1",
              topics: [
                "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
              ],
            },
            {
              address: "<contract_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
              position: "0x2",
              topics: [
                "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
              ],
            },
          ],
          to: "<contract_addr>",
          type: "CALL",
          value: "0x0",
        },
      ],
      from: "<caller>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000002",
      logs: [
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
          position: "0x1",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
          position: "0x2",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
      ],
      to: "<contract_addr>",
      type: "CALL",
      value: "0x0",
    },
    txHash: "<hash>",
  },
]
`;

snapshot[`call-trace debug_traceCall 1`] = `
{
  calls: [
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000002",
      logs: [
        {
          address: "<contract_callee_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000002",
          position: "0x0",
          topics: [
            "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
          ],
        },
      ],
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x0",
    },
    {
      error: "execution reverted",
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0xd1b96663",
      output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
      revertReason: "This function always fails",
      to: "<contract_callee_addr>",
      type: "CALL",
      value: "0x2386f26fc10000",
    },
    {
      calls: [
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xa329e8de0000000000000000000000000000000000000000000000000000000000000001",
          logs: [
            {
              address: "<contract_callee_addr>",
              data: "0x0000000000000000000000000000000000000000000000000000000000000001",
              position: "0x0",
              topics: [
                "0xa07465e8ec189714f79f3786a8f616baf78ebd9cb1769bd61f18de45f2567360",
              ],
            },
          ],
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x0",
        },
        {
          error: "execution reverted",
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0xd1b96663",
          output: "0x08c379a00000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000001a546869732066756e6374696f6e20616c77617973206661696c73000000000000",
          revertReason: "This function always fails",
          to: "<contract_callee_addr>",
          type: "CALL",
          value: "0x2386f26fc10000",
        },
        {
          from: "<contract_addr>",
          gas: "<gas>",
          gasUsed: "<gas>",
          input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000000",
          to: "<contract_addr>",
          type: "CALL",
          value: "0x0",
        },
      ],
      from: "<contract_addr>",
      gas: "<gas>",
      gasUsed: "<gas>",
      input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000001",
      logs: [
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
          position: "0x1",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
        {
          address: "<contract_addr>",
          data: "0x0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
          position: "0x2",
          topics: [
            "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
          ],
        },
      ],
      to: "<contract_addr>",
      type: "CALL",
      value: "0x0",
    },
  ],
  from: "0x0000000000000000000000000000000000000000",
  gas: "<gas>",
  gasUsed: "<gas>",
  input: "0x95805dad0000000000000000000000000000000000000000000000000000000000000002",
  logs: [
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000066265666f72650000000000000000000000000000000000000000000000000000",
      position: "0x1",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
    {
      address: "<contract_addr>",
      data: "0x0000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000056166746572000000000000000000000000000000000000000000000000000000",
      position: "0x2",
      topics: [
        "0x25d760f35a7a9cb2bffd2ea8756913655b3786c642f300a702e2934062763549",
      ],
    },
  ],
  to: "<contract_addr>",
  type: "CALL",
  value: "0x0",
}
`;

snapshot[`prestate write_storage.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x00000000000000000000000000000000000000000000000000000000000007e9",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167650000000000000000000000000000000000001a",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
      },
    },
  },
}
`;

snapshot[`prestate write_storage.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
      "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
    },
  },
}
`;

snapshot[`prestate write_storage_from_0.diff 1`] = `
{
  post: {
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f66726f6d5f30000000000000000000000028",
      },
    },
  },
  pre: {
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
      },
    },
  },
}
`;

snapshot[`prestate write_storage_from_0.no_diff 1`] = `
{
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
      "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
    },
  },
}
`;

snapshot[`prestate read_storage.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate read_storage.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
    },
  },
}
`;

snapshot[`prestate deposit.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      storage: {
        "<wallet_balance>": "0x00000000000000000000000000000000000000000000000098a7d9b8314c0000",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
      },
    },
  },
}
`;

snapshot[`prestate deposit.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
    },
  },
}
`;

snapshot[`prestate withdraw.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      storage: {
        "<wallet_balance>": "0x00000000000000000000000000000000000000000000000098a7d9b8314c0000",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
      },
    },
  },
}
`;

snapshot[`prestate withdraw.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "<wallet_balance>": "0x0000000000000000000000000000000000000000000000008ac7230489e80000",
    },
  },
}
`;

snapshot[`prestate get_balance.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate get_balance.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
}
`;

snapshot[`prestate get_external_balance.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate get_external_balance.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
  "<prestate_contract_child_addr>": {
    balance: "<balance>",
  },
}
`;

snapshot[`prestate instantiate_child.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate instantiate_child.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
}
`;

snapshot[`prestate call_contract.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
    "<prestate_contract_child_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000002",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_child_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000001",
      },
    },
  },
}
`;

snapshot[`prestate call_contract.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
  "<prestate_contract_child_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x0000000000000000000000000000000000000000000000000000000000000001",
    },
  },
}
`;

snapshot[`prestate delegate_call_contract.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      nonce: "<nonce>",
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
  },
}
`;

snapshot[`prestate delegate_call_contract.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
  },
}
`;

snapshot[`prestate trace_block_write_storage_twice.diff 1`] = `
[
  {
    result: {
      post: {
        "<caller_addr>": {
          balance: "<balance>",
          nonce: "<nonce>",
        },
        "<prestate_contract_addr>": {
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002c",
            "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
          },
        },
      },
      pre: {
        "<caller_addr>": {
          balance: "<balance>",
          nonce: "<nonce>",
        },
        "<prestate_contract_addr>": {
          balance: "<balance>",
          code: "<code>",
          nonce: "<nonce>",
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
            "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
          },
        },
      },
    },
    txHash: "<tx_hash>",
  },
  {
    result: {
      post: {
        "<caller_addr>": {
          balance: "<balance>",
          nonce: "<nonce>",
        },
        "<prestate_contract_addr>": {
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
          },
        },
      },
      pre: {
        "<caller_addr>": {
          balance: "<balance>",
          nonce: "<nonce>",
        },
        "<prestate_contract_addr>": {
          balance: "<balance>",
          code: "<code>",
          nonce: "<nonce>",
          storage: {
            "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002c",
          },
        },
      },
    },
    txHash: "<tx_hash>",
  },
]
`;

snapshot[`prestate trace_tx_write_storage_twice.diff 1`] = `
{
  post: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002c",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
      },
    },
  },
  pre: {
    "<caller_addr>": {
      balance: "<balance>",
      nonce: "<nonce>",
    },
    "<prestate_contract_addr>": {
      balance: "<balance>",
      code: "<code>",
      nonce: "<nonce>",
      storage: {
        "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "0x0000000000000000000000000000000000000000000000000000000000000002": "0x696e697400000000000000000000000000000000000000000000000000000008",
      },
    },
  },
}
`;

snapshot[`prestate trace_block_write_storage_twice.no_diff 1`] = `
[
  {
    result: {
      "<caller_addr>": {
        balance: "<balance>",
        nonce: "<nonce>",
      },
      "<prestate_contract_addr>": {
        balance: "<balance>",
        code: "<code>",
        nonce: "<nonce>",
        storage: {
          "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
          "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
        },
      },
    },
    txHash: "<tx_hash>",
  },
  {
    result: {
      "<caller_addr>": {
        balance: "<balance>",
        nonce: "<nonce>",
      },
      "<prestate_contract_addr>": {
        balance: "<balance>",
        code: "<code>",
        nonce: "<nonce>",
        storage: {
          "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002d",
          "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
        },
      },
    },
    txHash: "<tx_hash>",
  },
]
`;

snapshot[`prestate trace_tx_write_storage_twice.no_diff 1`] = `
{
  "<caller_addr>": {
    balance: "<balance>",
    nonce: "<nonce>",
  },
  "<prestate_contract_addr>": {
    balance: "<balance>",
    code: "<code>",
    nonce: "<nonce>",
    storage: {
      "0x0000000000000000000000000000000000000000000000000000000000000000": "0x000000000000000000000000000000000000000000000000000000000000002b",
      "0x0000000000000000000000000000000000000000000000000000000000000002": "0x77726974655f73746f726167655f747769636500000000000000000000000026",
    },
  },
}
`;
